Adding PUT method for update one note
